--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,9 +11,10 @@
 <body>
     <div class="container">
 
-        @@include('../components/_header-nav.html')
+        @@include('../components/index/_header-nav.html')
 
-        <h1>Карточки</h1>
+        @@include('../components/index/main/_nc-section-main.html')
+
         @@include('../components/_card.html', {
         "img": "./assets/images/cat1",
         "alt": "Изображение 3",
