--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,6 +15,7 @@
 
         @@include('../components/index/main/_section-main.html')
 
+        @@include('../components/index/footer/_footer.html')
     </div>
 
 </body>
