second page completed

--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -13,6 +13,7 @@
 
         @@include('../components/shop/_shop-filter.html')
 
+        @@include('../components/index/footer/_footer.html')
     </div>
 </body>
 </html>
