--- a/src/pages/asgaard-sofa.html
+++ b/src/pages/asgaard-sofa.html
@@ -10,8 +10,143 @@
     <div class="container">
         @@include('../components/index/_header-nav.html')
 
-        
+        <section class="asgaard-path">
+            <div class="asgaard-path-main-path">
+                <div class="asgaard-path-main-path__content">
+                    <div class="asgaard-path-main-path__content__text">
+                        Home
+                    </div>
+                    <div>
+                        >
+                    </div>
+                    <div class="asgaard-path-main-path__content__text">
+                        Shop
+                    </div>
+                    <div>
+                        >
+                    </div>
+                    <div class="asgaard-path-main-path__content__line"></div>
+                    <div class="asgaard-path-main-path__content__text-2">
+                        Asgaard sofa
+                    </div>
+                </div>
+            </div>
+        </section>
 
+
+        <section class="inspection-furneture">
+            <div class="inspection-furneture__block">
+                <div class="choice-photo-furneture">
+                    <div><img src="/assets/images/choice-photo-furneture-1.webp" alt=""></div>
+                    <div><img src="/assets/images/choice-photo-furneture-2.webp" alt=""></div>
+                    <div><img src="/assets/images/choice-photo-furneture-3.webp" alt=""></div>
+                    <div><img src="/assets/images/choice-photo-furneture-4.webp" alt=""></div>
+                </div>
+                <div class="main-photo-furneture">
+                    <div>
+                        <picture>
+                            <source srcset="/assets/images/main-photo-furneture-1-sm.webp" media="(max-width: 480px)">
+                            <source srcset="/assets/images/main-photo-furneture-1-lg.webp" media="(max-width: 800px)">
+                            <img src="/assets/images/main-photo-furneture-1.webp" alt="" class="main-photo-furneture__image">
+                        </picture>
+                    </div>
+                </div>
+                <div class="information-about">
+                    <div class="information-about__title">
+                        Asgaard sofa
+                    </div>
+                    <div class="information-about__cost">
+                        Rs. 250,000.00
+                    </div>
+                    <div class="information-about__rating">
+                        <div class="information-about__rating__stars">
+                            @@include('../components/_rating.html')
+                        </div>
+                        <div class="information-about__rating__line"></div>
+                        <div class="information-about__rating__rating-count">
+                            5 Customer Review
+                        </div>
+                    </div>
+                    <div class="information-about__description">
+                        Setting the bar as one of the loudest speakers in its class, the Kilburn is a compact, stout-hearted hero with a well-balanced audio which boasts a clear midrange and extended highs for a sound.
+                    </div>
+                    <div class="information-about__size">
+                        <div class="information-about__size__title">
+                            Size
+                        </div>
+                        <div class="information-
+                        about__size__choice">
+                            @@include('../components/_size-choice.html')
+                        </div>
+                    </div>
+                    <div class="information-about__color">
+                        <div class="information-about__color__title">
+                            Color
+                        </div>
+                        <div class="information-about__color__choice">
+                            @@include('../components/_color-choice.html')
+                        </div>
+                    </div>
+
+
+                    <div class="information-about__count-things">
+                        <div>
+                            <button class="count-things-btn">
+                                <div>+</div>
+                                <div>1</div>
+                                <div>-</div>
+                            </button>
+                        </div>
+                        <div>
+                            <button class="count-things-main-btn">Add To Cart</button>
+                        </div>
+                        <div>
+                            <button class="count-things-main-btn">+ Compare</button>
+                        </div>
+                    </div>
+
+
+                    <div class="information-about__footer">
+                        <div class="information-about__footer__line"></div>
+                        <div class="information-about__footer__SKU">
+                            <div class="information-about__footer__SKU__text1">
+                                SKU
+                            </div>
+                            <div class="information-about__footer__SKU__text2">
+                                : SS001
+                            </div>
+                        </div>
+                        <div class="information-about__footer__Category">
+                            <div class="information-about__footer__SKU__text1">
+                                Category
+                            </div>
+                            <div class="information-about__footer__SKU__text2">
+                                : Sofas
+                            </div>
+                        </div>
+                        <div class="information-about__footer__Tags">
+                            <div class="information-about__footer__SKU__text1">
+                                Tags
+                            </div>
+                            <div class="information-about__footer__SKU__text2">
+                                : Sofa, Chair, Home, Shop
+                            </div>
+                        </div>
+                        <div class="information-about__footer__Shape">
+                            <div class="information-about__footer__SKU__text1">
+                                Share
+                            </div>
+                            <div class="information-about__footer__SKU__text2">
+                                <div>:</div>
+                                <div><img src="" alt=""></div> 
+                                <div><img src="" alt=""></div> 
+                                <div><img src="" alt=""></div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </div>
