все, конец 3 - начало 4

--- a/src/pages/asgaard-sofa.html
+++ b/src/pages/asgaard-sofa.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="asgaard-path-main-path__content__line"></div>
                     <div class="asgaard-path-main-path__content__text-2">
-                        Asgaard sofa
+                         <a href="./asgaard-sofa-cart.html">Asgaard sofa</a>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                             <button class="count-things-main-btn">Add To Cart</button>
                         </div>
                         <div>
-                            <button class="count-things-main-btn">+ Compare</button>
+                            <button class="count-things-main-btn"><a href="../product-comparison.html">+ Compare</a></button>
                         </div>
                     </div>
 
