начало корзины + конец 4

--- a/src/pages/asgaard-sofa-cart.html
+++ b/src/pages/asgaard-sofa-cart.html
@@ -9,6 +9,10 @@
 <body>
     <div class="overlay">
         <div class="container">
+            <div class="cart-block">
+                *ТУТ ДОЛЖНА БЫТЬ КОРЗИНА* <br>
+                НАДО РАСПОЛОЖИТЬ КАК-ТО СПРАВА СВЕРХУ ЛОЛ
+            </div>
             @@include('../components/index/_header-nav.html')
                 <section class="asgaard-path">
                     <div class="asgaard-path-main-path">
