after sharaga again

--- a/src/pages/product-comparison.html
+++ b/src/pages/product-comparison.html
@@ -60,161 +60,161 @@
 
         <section class="main-comparison">
             <div class="main-comparison__line"></div>
-            <table>
-                <thead class="th-edit">
+            <table class="comparison-table">
+                <thead>
                     <tr>
-                        <th scope = "col" class="th-edit">General</th>
+                        <th scope = "col" class="th-edit-title">General</th>
                         <th scope = "col" class="th-edit"></th>
                         <th scope = "col" class="th-edit"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Sales Package</th>
-                        <th>1 sectional sofa</th>
-                        <th>1 Three Seater, 2 Single Seater</th>
+                        <th class="th-edit">Sales Package</th>
+                        <th class="th-edit">1 sectional sofa</th>
+                        <th class="th-edit">1 Three Seater, 2 Single Seater</th>
                     </tr>
                     <tr>
-                        <th>Model Number</th>
-                        <th>TFCBLIGRBL6SRHS</th>
-                        <th>DTUBLIGRBL568</th>
+                        <th class="th-edit">Model Number</th>
+                        <th class="th-edit">TFCBLIGRBL6SRHS</th>
+                        <th class="th-edit">DTUBLIGRBL568</th>
                     </tr>
                     <tr>
-                        <th>Secondary Material</th>
-                        <th>Solid Wood</th>
-                        <th>Solid Wood</th>
+                        <th class="th-edit">Secondary Material</th>
+                        <th class="th-edit">Solid Wood</th>
+                        <th class="th-edit">Solid Wood</th>
                     </tr>
                     <tr>
-                        <th>Configuration</th>
-                        <th>L-shaped</th>
-                        <th>L-shaped</th>
+                        <th class="th-edit">Configuration</th>
+                        <th class="th-edit">L-shaped</th>
+                        <th class="th-edit">L-shaped</th>
                     </tr>
                     <tr>
-                        <th>Upholstery Material</th>
-                        <th>Fabric + Cotton</th>
-                        <th>Fabric + Cotton</th>
+                        <th class="th-edit">Upholstery Material</th>
+                        <th class="th-edit">Fabric + Cotton</th>
+                        <th class="th-edit">Fabric + Cotton</th>
                     </tr>
                     <tr>
-                        <th>Upholstery Color</th>
-                        <th>Bright Grey & Lion</th>
-                        <th>Bright Grey & Lion</th>
+                        <th class="th-edit">Upholstery Color</th>
+                        <th class="th-edit">Bright Grey & Lion</th>
+                        <th class="th-edit">Bright Grey & Lion</th>
                     </tr>
                 </tbody>
 
 
                 <thead>
                     <tr>
-                        <th scope = "col" class="th-edit">Product</th>
+                        <th scope = "col" class="th-edit-title">Product</th>
                         <th scope = "col" class="th-edit"></th>
                         <th scope = "col" class="th-edit"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Filling Material</th>
-                        <th>Foam</th>
-                        <th>Matte</th>
+                        <th class="th-edit">Filling Material</th>
+                        <th class="th-edit">Foam</th>
+                        <th class="th-edit">Matte</th>
                     </tr>
                     <tr>
-                        <th>Finish Type</th>
-                        <th>Bright Grey & Lion</th>
-                        <th>Bright Grey & Lion</th>
+                        <th class="th-edit">Finish Type</th>
+                        <th class="th-edit">Bright Grey & Lion</th>
+                        <th class="th-edit">Bright Grey & Lion</th>
                     </tr>
                     <tr>
-                        <th>Adjustable Headrest</th>
-                        <th>No</th>
-                        <th>yes</th>
+                        <th class="th-edit">Adjustable Headrest</th>
+                        <th class="th-edit">No</th>
+                        <th class="th-edit">yes</th>
                     </tr>
                     <tr>
-                        <th>Maximum Load Capacity</th>
-                        <th>280 KG</th>
-                        <th>300 KG</th>
+                        <th class="th-edit">Maximum Load Capacity</th>
+                        <th class="th-edit">280 KG</th>
+                        <th class="th-edit">300 KG</th>
                     </tr>
                     <tr>
-                        <th>Origin of Manufacture</th>
-                        <th>India</th>
-                        <th>India</th>
+                        <th class="th-edit">Origin of Manufacture</th>
+                        <th class="th-edit">India</th>
+                        <th class="th-edit">India</th>
                     </tr>
                 </tbody>
 
                 <thead>
                     <tr>
-                        <th scope = "col" class="th-edit">Dimensions</th>
+                        <th scope = "col" class="th-edit-title">Dimensions</th>
                         <th scope = "col" class="th-edit"></th>
                         <th scope = "col" class="th-edit"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Width</th>
-                        <th>265.32 cm</th>
-                        <th>265.32 cm</th>
+                        <th class="th-edit">Width</th>
+                        <th class="th-edit">265.32 cm</th>
+                        <th class="th-edit">265.32 cm</th>
                     </tr>
                     <tr>
-                        <th>Height</th>
-                        <th>76 cm</th>
-                        <th>76 cm</th>
+                        <th class="th-edit">Height</th>
+                        <th class="th-edit">76 cm</th>
+                        <th class="th-edit">76 cm</th>
                     </tr>
                     <tr>
-                        <th>Depth</th>
-                        <th>167.76 cm</th>
-                        <th>167.76 cm</th>
+                        <th class="th-edit">Depth</th>
+                        <th class="th-edit">167.76 cm</th>
+                        <th class="th-edit">167.76 cm</th>
                     </tr>
                     <tr>
-                        <th>Weight</th>
-                        <th>45 KG</th>
-                        <th>65 KG</th>
+                        <th class="th-edit">Weight</th>
+                        <th class="th-edit">45 KG</th>
+                        <th class="th-edit">65 KG</th>
                     </tr>
                     <tr>
-                        <th>Seat Height</th>
-                        <th>41.52 cm</th>
-                        <th>41.52 cm</th>
+                        <th class="th-edit">Seat Height</th>
+                        <th class="th-edit">41.52 cm</th>
+                        <th class="th-edit">41.52 cm</th>
                     </tr>
                     <tr>
-                        <th>Leg Height</th>
-                        <th>5.46 cm</th>
-                        <th>5.46 cm</th>
+                        <th class="th-edit">Leg Height</th>
+                        <th class="th-edit">5.46 cm</th>
+                        <th class="th-edit">5.46 cm</th>
                     </tr>
                 </tbody>
 
 
                 <thead>
                     <tr>
-                        <th scope = "col" class="th-edit">Warranty</th>
+                        <th scope = "col" class="th-edit-title">Warranty</th>
                         <th scope = "col" class="th-edit"></th>
                         <th scope = "col" class="th-edit"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Warranty Summary</th>
-                        <th>1 Year Manufacturing Warranty</th>
-                        <th>1.2 Year Manufacturing Warranty</th>
+                        <th class="th-edit">Warranty Summary</th>
+                        <th class="th-edit">1 Year Manufacturing Warranty</th>
+                        <th class="th-edit">1.2 Year Manufacturing Warranty</th>
                     </tr>
                     <tr>
-                        <th>Warranty Service Type</th>
-                        <th>For Warranty Claims or Any Product Related Issues Please Email at operations@trevifurniture.com</th>
-                        <th>For Warranty Claims or Any Product Related Issues Please Email at support@xyz.com</th>
+                        <th class="th-edit">Warranty Service Type</th>
+                        <th class="th-edit">For Warranty Claims or Any Product Related Issues Please Email at operations@trevifurniture.com</th>
+                        <th class="th-edit">For Warranty Claims or Any Product Related Issues Please Email at support@xyz.com</th>
                     </tr>
                     <tr>
-                        <th>Covered in Warranty</th>
-                        <th>Warranty Against Manufacturing Defect</th>
-                        <th>Warranty of the product is limited to manufacturing defects only.</th>
+                        <th class="th-edit">Covered in Warranty</th>
+                        <th class="th-edit">Warranty Against Manufacturing Defect</th>
+                        <th class="th-edit">Warranty of the product is limited to manufacturing defects only.</th>
                     </tr>
                     <tr>
-                        <th>Not Covered in Warranty</th>
-                        <th>The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</th>
-                        <th>The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</th>
+                        <th class="th-edit">Not Covered in Warranty</th>
+                        <th class="th-edit">The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</th>
+                        <th class="th-edit">The Warranty Does Not Cover Damages Due To Usage Of The Product Beyond Its Intended Use And Wear & Tear In The Natural Course Of Product Usage.</th>
                     </tr>
                     <tr>
-                        <th>Domestic Warranty</th>
-                        <th>1 Year</th>
-                        <th>3 Months</th>
+                        <th class="th-edit">Domestic Warranty</th>
+                        <th class="th-edit">1 Year</th>
+                        <th class="th-edit">3 Months</th>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th><button class="table-btn">Add To Cart</button></th>
-                        <th><button class="table-btn">Add To Cart</button></th>
+                        <th class="th-edit"></th>
+                        <th class="th-edit"><button class="table-btn"><a href="../main-cart.html">Add To Cart</a></button></th>
+                        <th class="th-edit"><button class="table-btn">Add To Cart</button></th>
                     </tr>
                 </tbody>
             </table>
@@ -225,8 +225,6 @@
         </section>
 
         @@include('../components/index/footer/_footer.html')
-
->>>>>>> c438cb653670799eb5ea4a7d115d4aa7b3db0756
     </div>
 </body>
 </html>
