--- a/src/pages/main-cart.html
+++ b/src/pages/main-cart.html
@@ -7,6 +7,69 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        @@include('../components/index/_header-nav.html')
+
+        @@include('../components/_orientation-page-block.html', {
+        "title__header" : "Cart",
+        "where": "Cart"
+        })
+
+        <section class="cart-content">
+            <div class="cart-content__block">
+                <div class="cart-content__block__table">
+                    <table class="table-cart">
+                        <thead class="thead-cart">
+                            <tr class="tr-cart">
+                                <th class="th-cart"></th>
+                                <th class="th-cart">Product</th>
+                                <th class="th-cart">Price</th>
+                                <th class="th-cart">Quantity</th>
+                                <th class="th-cart">Subtotal</th>
+                                <th class="th-cart-body__itog__delete"></th>
+                            </tr>
+                        </thead>
+                        <tbody class="tbody-cart">
+                            <tr class="tr-cart">
+                                <th class="th-cart-body"><img src="/assets/images/for-table-cart.webp" alt=""></th>
+                                <th class="th-cart-body">Asgaard sofa</th>
+                                <th class="th-cart-body">Rs. 250,000.00</th>
+                                <th class="th-cart-body"><div class="layout-table-cart">1</div></th>
+                                <th class="th-cart-body__itog">Rs. 250,000.00</th>
+                                <th class="th-cart-body__itog__delete"><svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M23.625 7H20.125V4.8125C20.125 3.84727 19.3402 3.0625 18.375 3.0625H9.625C8.65977 3.0625 7.875 3.84727 7.875 4.8125V7H4.375C3.89102 7 3.5 7.39102 3.5 7.875V8.75C3.5 8.87031 3.59844 8.96875 3.71875 8.96875H5.37031L6.0457 23.2695C6.08945 24.202 6.86055 24.9375 7.79297 24.9375H20.207C21.1422 24.9375 21.9105 24.2047 21.9543 23.2695L22.6297 8.96875H24.2812C24.4016 8.96875 24.5 8.87031 24.5 8.75V7.875C24.5 7.39102 24.109 7 23.625 7ZM18.1562 7H9.84375V5.03125H18.1562V7Z" fill="#B88E2F"/>
+                                </svg>
+                                </th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="cart-content__block__cart-totals">
+                    <div class="cart-content__block__cart-totals__text">
+                        <div class="cart-content__block__cart-totals__text__title">
+                            Cart Totals
+                        </div>
+                        <div class="cart-content__block__cart-totals__text__sum">
+                            <div class="cart-content__block__cart-totals__text__sum__subtotal">
+                                Subtotal <span class="Subtotal-span">Rs. 250,000.00</span>
+                            </div>
+                            <div class="cart-content__block__cart-totals__text__sum__total">
+                                Total <span class="Total-span">Rs. 250,000.00</span>
+                            </div>
+                        </div>
+                        <div class="cart-content__block__cart-totals__text__button">
+                            <button class="cart-content__block__cart-totals__text__button__btn"><a href="./checkout.html">Check Out</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="nomination-section">
+            @@include('../components/_nomination.html')
+        </section>
+
+        @@include('../components/index/footer/_footer.html')
+    </div>
 </body>
 </html>
