--- a/src/pages/asgaard-sofa.html
+++ b/src/pages/asgaard-sofa.html
@@ -93,12 +93,13 @@
                         <div>
                             <button class="count-things-btn">
                                 <div>+</div>
+                                
                                 <div>1</div>
                                 <div>-</div>
                             </button>
                         </div>
                         <div>
-                            <button class="count-things-main-btn">Add To Cart</button>
+                            <button class="count-things-main-btn"><a href="./asgaard-sofa-cart.html">Add To Cart</a></button>
                         </div>
                         <div>
                             <button class="count-things-main-btn"><a href="../product-comparison.html">+ Compare</a></button>
